--- a/milestone2.ipynb
+++ b/milestone2.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Animal Detection Using Deep Learning\n",
+    "\n",
+    "This notebook implements and compares three different deep learning architectures for multi-class animal image classification:\n",
+    "- **Model 1**: AlexNet-inspired CNN\n",
+    "- **Model 2**: ResNet-34\n",
+    "- **Model 3**: InceptionV3\n",
+    "\n",
+    "The dataset contains images of 5 animal species: bighorn, butterfly, camel, chimpanzee, and pig."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 169,
    "metadata": {},
@@ -309,6 +323,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Import Required Libraries\n",
+    "\n",
+    "Importing essential libraries for:\n",
+    "- Deep learning: TensorFlow, Keras\n",
+    "- Image processing: scikit-image\n",
+    "- Data manipulation: NumPy\n",
+    "- Visualization: Matplotlib\n",
+    "- Model evaluation: scikit-learn"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 170,
    "metadata": {},
@@ -335,6 +363,15 @@
     "#     # plt.title(f'Serial Number: {serial_number}')\n",
     "#     # plt.axis('off')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Data Loading and Preprocessing\n",
+    "\n",
+    "Loading images from train and test directories, converting grayscale images to RGB, and preparing the dataset for training."
    ]
   },
   {
@@ -417,6 +454,15 @@
     "# model.fit(x_train, y_train, epochs=10, batch_size=32, validation_split=0.2)\n",
     "\n",
     "model.summary()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Data Augmentation\n",
+    "\n",
+    "Applying data augmentation techniques to balance the dataset by generating additional images for minority classes (bighorn and pig) using rotation, shifting, shearing, zooming, and horizontal flipping."
    ]
   },
   {
@@ -541,6 +587,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Model 1: AlexNet-inspired CNN Architecture\n",
+    "\n",
+    "Building a Convolutional Neural Network inspired by AlexNet architecture with:\n",
+    "- 5 Convolutional layers with varying filter sizes\n",
+    "- 3 MaxPooling layers for downsampling\n",
+    "- 2 Dense layers with 4096 neurons each\n",
+    "- Softmax output layer for 5 classes\n",
+    "\n",
+    "**Input size**: 224×224×3  \n",
+    "**Total parameters**: ~60M parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 173,
    "metadata": {},
@@ -594,6 +656,15 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model 1: Training\n",
+    "\n",
+    "Training the AlexNet-inspired model for 50 epochs with batch size of 32."
    ]
   },
   {
@@ -654,6 +725,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model 1: Training History Visualization\n",
+    "\n",
+    "Plotting training and validation loss/accuracy curves to monitor model performance and detect overfitting."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 175,
    "metadata": {},
@@ -688,6 +768,15 @@
     "# Calculate F1 score\n",
     "f1 = f1_score(np.argmax(y_test, axis=1), np.argmax(predictions, axis=1), average='weighted')\n",
     "print(\"F1 Score:\", f1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model 1: Misclassified Images Analysis\n",
+    "\n",
+    "Identifying and visualizing misclassified images to understand model weaknesses and prediction errors."
    ]
   },
   {
@@ -1312,6 +1401,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model 1: Performance Metrics\n",
+    "\n",
+    "Calculating accuracy, confusion matrix, and F1 score to evaluate overall model performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 177,
    "metadata": {},
@@ -1369,6 +1467,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Model 2: ResNet-34 Architecture\n",
+    "\n",
+    "Implementing ResNet-34 (Residual Network) with:\n",
+    "- Identity blocks with skip connections\n",
+    "- Convolutional blocks for downsampling\n",
+    "- 34 layers total\n",
+    "- Residual connections to prevent vanishing gradient problem\n",
+    "\n",
+    "**Input size**: 224×224×3  \n",
+    "**Architecture**: Based on \"Deep Residual Learning for Image Recognition\" (He et al.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 178,
    "metadata": {},
@@ -1422,6 +1536,15 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model 2: Training\n",
+    "\n",
+    "Training the ResNet-34 model for 20 epochs with batch size of 32."
    ]
   },
   {
@@ -1505,6 +1628,15 @@
     "# Calculate F1 score\n",
     "f1 = f1_score(np.argmax(y_test, axis=1), np.argmax(predictions, axis=1), average='weighted')\n",
     "print(\"F1 Score:\", f1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model 2: Training History Visualization\n",
+    "\n",
+    "Plotting training and validation curves for ResNet-34 to analyze model learning behavior."
    ]
   },
   {
@@ -2454,6 +2586,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model 2: Evaluation and Performance Metrics\n",
+    "\n",
+    "Analyzing misclassified images and calculating performance metrics (accuracy, confusion matrix, F1 score) for ResNet-34."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 181,
    "metadata": {},
@@ -2496,6 +2637,21 @@
     "\n",
     "# Train the model\n",
     "history3 = model.fit(x_train, y_train, validation_data=(x_test, y_test), epochs=10, batch_size=32, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Model 3: InceptionV3 Architecture\n",
+    "\n",
+    "Implementing Google's InceptionV3 architecture with:\n",
+    "- Multi-scale feature extraction using inception modules\n",
+    "- Factorized convolutions\n",
+    "- Auxiliary classifiers for improved gradient flow\n",
+    "\n",
+    "**Input size**: 299×299×3 (Note: Images are resized from 224×224 to 299×299)  \n",
+    "**Architecture**: Based on \"Rethinking the Inception Architecture for Computer Vision\" (Szegedy et al.)"
    ]
   },
   {
@@ -2552,6 +2708,15 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model 3: Training\n",
+    "\n",
+    "Training the InceptionV3 model for 10 epochs with batch size of 32."
    ]
   },
   {
@@ -2635,6 +2800,35 @@
     "# Calculate F1 score\n",
     "f1 = f1_score(np.argmax(y_test, axis=1), np.argmax(predictions, axis=1), average='weighted')\n",
     "print(\"F1 Score:\", f1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model 3: Final Evaluation\n",
+    "\n",
+    "Comprehensive evaluation of InceptionV3 including misclassified images analysis and performance metrics.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "This notebook demonstrates three different approaches to animal image classification:\n",
+    "1. **AlexNet-inspired CNN**: Classic architecture with good baseline performance\n",
+    "2. **ResNet-34**: Advanced architecture with residual connections for deeper learning\n",
+    "3. **InceptionV3**: State-of-the-art architecture with multi-scale feature extraction\n",
+    "\n",
+    "Compare the results to determine which architecture works best for this specific dataset!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model 3: Training History Visualization\n",
+    "\n",
+    "Plotting training and validation curves for InceptionV3 to monitor learning progress."
    ]
   }
  ],
